Adding support for the responsive images plugin

--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,7 @@ title: "Foonoo Documentation"
 index: Introduction
 plugins:
     - contrib/highlight
+    - contrib/responsive_images
 menu:
   - title: Documentation
     url: .
