Working on updating the plugin references

--- a/site.yml
+++ b/site.yml
@@ -3,8 +3,8 @@ enable-toc: True
 title: "Foonoo Documentation"
 index: Introduction
 plugins:
-    - contrib/highlight
-    - contrib/responsive_images
+    - foonoo/highlight
+    - foonoo/responsive_images
 menu:
   - title: Documentation
     url: .
